output.txt
In file included from symbolTable.h:14:0,
                 from parser.ypp:4:
Element.h: In instantiation of ‘T* Element::to() [with T = Type]’:
parser.ypp:81:67:   required from here
Element.h:82:12: error: cannot dynamic_cast ‘(Element*)this’ (of type ‘struct Element*’) to type ‘struct Type*’ (source type is not polymorphic)
     T* e = dynamic_cast<T*>(this);
            ^~~~~~~~~~~~~~~~~~~~~~
Element.h: In instantiation of ‘T* Element::to() [with T = Exp]’:
parser.ypp:83:77:   required from here
Element.h:82:12: error: cannot dynamic_cast ‘(Element*)this’ (of type ‘struct Element*’) to type ‘struct Exp*’ (source type is not polymorphic)
Element.h: In instantiation of ‘T* Element::to() [with T = Identifier]’:
parser.ypp:94:77:   required from here
Element.h:82:12: error: cannot dynamic_cast ‘(Element*)this’ (of type ‘struct Element*’) to type ‘struct Identifier*’ (source type is not polymorphic)
make: *** [all] Error 1
